Splitting transactor in its own module.